--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.list-style{
+  display: flex;
+  flex-direction: row;
+  margin-top: 5px;
+  position: relative;
+}
+.list-style .fa-times {
+  width: 20px;
+  height: 20px;
+  position: relative;
+  top: 5px;
+  left: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(248, 8, 8);
+  border-radius: 50%;
+  margin: 0 15px 0 5px;
+}
+.list-style li {
+  font-size: 20px;
+  display: inline-block;
+  font-weight: 500;
+}
+
